[gd_scene load_steps=37 format=2]

[ext_resource path="res://Assets/environment/TitleScreen.png" type="Texture" id=1]
[ext_resource path="res://Assets/interface/start-game-normal 00.png" type="Texture" id=2]
[ext_resource path="res://Assets/interface/exit-normal 00.png" type="Texture" id=3]
[ext_resource path="res://Assets/interface/game-title 08.png" type="Texture" id=4]
[ext_resource path="res://Assets/interface/game-title 09.png" type="Texture" id=5]
[ext_resource path="res://Assets/interface/game-title 10.png" type="Texture" id=6]
[ext_resource path="res://TitleScreen.gd" type="Script" id=7]
[ext_resource path="res://Assets/interface/game-title 11.png" type="Texture" id=8]
[ext_resource path="res://Assets/interface/game-title 12.png" type="Texture" id=9]
[ext_resource path="res://Assets/interface/game-title 13.png" type="Texture" id=10]
[ext_resource path="res://Assets/interface/game-title 04.png" type="Texture" id=11]
[ext_resource path="res://Assets/interface/game-title 03.png" type="Texture" id=12]
[ext_resource path="res://Assets/interface/game-title 01.png" type="Texture" id=13]
[ext_resource path="res://Assets/interface/game-title 02.png" type="Texture" id=14]
[ext_resource path="res://Assets/interface/game-title 05.png" type="Texture" id=15]
[ext_resource path="res://Assets/interface/game-title 06.png" type="Texture" id=16]
[ext_resource path="res://Assets/interface/game-title 07.png" type="Texture" id=17]
[ext_resource path="res://Assets/interface/exit-focused 00.png" type="Texture" id=18]
[ext_resource path="res://Assets/interface/exit-focused 01.png" type="Texture" id=19]
[ext_resource path="res://Assets/interface/exit-focused 02.png" type="Texture" id=20]
[ext_resource path="res://Assets/interface/exit-focused 03.png" type="Texture" id=21]
[ext_resource path="res://Assets/interface/exit-focused 04.png" type="Texture" id=22]
[ext_resource path="res://Assets/interface/start-game-focused 03.png" type="Texture" id=23]
[ext_resource path="res://Assets/interface/start-game-focused 04.png" type="Texture" id=24]
[ext_resource path="res://Assets/interface/start-game-focused 02.png" type="Texture" id=25]
[ext_resource path="res://Assets/interface/start-game-focused 00.png" type="Texture" id=26]
[ext_resource path="res://Assets/interface/start-game-focused 07.png" type="Texture" id=27]
[ext_resource path="res://Assets/interface/exit-focused 06.png" type="Texture" id=28]
[ext_resource path="res://Assets/interface/start-game-focused 06.png" type="Texture" id=29]
[ext_resource path="res://Assets/interface/exit-focused 05.png" type="Texture" id=30]
[ext_resource path="res://Assets/interface/start-game-focused 05.png" type="Texture" id=31]
[ext_resource path="res://Assets/interface/exit-focused 07.png" type="Texture" id=32]
[ext_resource path="res://Assets/interface/start-game-focused 01.png" type="Texture" id=33]

[sub_resource type="AnimatedTexture" id=1]
frames = 13
fps = 7.0
frame_0/texture = ExtResource( 13 )
frame_0/delay_sec = 2.0
frame_1/texture = ExtResource( 14 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 12 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 11 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 15 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 16 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 17 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 4 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 5 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 6 )
frame_9/delay_sec = 0.0
frame_10/texture = ExtResource( 8 )
frame_10/delay_sec = 0.0
frame_11/texture = ExtResource( 9 )
frame_11/delay_sec = 0.0
frame_12/texture = ExtResource( 10 )
frame_12/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=2]
frames = 8
fps = 5.0
frame_0/texture = ExtResource( 26 )
frame_1/texture = ExtResource( 33 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 25 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 23 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 24 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 31 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 29 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 27 )
frame_7/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=3]
frames = 8
fps = 5.0
frame_0/texture = ExtResource( 18 )
frame_1/texture = ExtResource( 19 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 20 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 21 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 22 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 30 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 28 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 32 )
frame_7/delay_sec = 0.0

[node name="TitleScreen" type="Node"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 34
custom_constants/margin_bottom = 34
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 95.0
margin_top = 34.0
margin_right = 545.0
margin_bottom = 326.0
size_flags_horizontal = 4

[node name="GameTitle" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 450.0
margin_bottom = 110.0
texture = SubResource( 1 )

[node name="ButtonsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 55.0
margin_top = 114.0
margin_right = 394.0
margin_bottom = 286.0
size_flags_horizontal = 4
custom_constants/separation = -30

[node name="StartGameButton" type="TextureButton" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
margin_right = 339.0
margin_bottom = 101.0
focus_neighbour_left = NodePath("../ExitButton")
focus_neighbour_top = NodePath("../ExitButton")
focus_neighbour_right = NodePath("../ExitButton")
focus_neighbour_bottom = NodePath("../ExitButton")
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
texture_focused = SubResource( 2 )

[node name="ExitButton" type="TextureButton" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
margin_top = 71.0
margin_right = 339.0
margin_bottom = 172.0
focus_neighbour_left = NodePath("../StartGameButton")
focus_neighbour_top = NodePath("../StartGameButton")
focus_neighbour_right = NodePath("../StartGameButton")
focus_neighbour_bottom = NodePath("../StartGameButton")
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
texture_focused = SubResource( 3 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
volume_db = -20.0

[node name="SFX" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
